# vexcalibur

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .secrets.baseline  .tool-versions  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  renovate.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  fuzz.yml  pages.yml  pre-commit.yml  pypi.yml  release-validation.yml  release.yml  scorecard.yml  sync-style-guide.yml
docs/: conf.py  index.md
docs/development/: ci.md  fuzzing.md  github-governance.md  python-style.md
docs/explanation/: architecture.md  project-status.md  self-release-evidence.md
docs/how-to/: build-release-evidence.md  generate-csaf.md  generate-cyclonedx-vex.md  generate-openvex.md  publish-to-pypi.md  use-private-osv-mirror.md
docs/reference/: cli.md  csaf-output.md  cyclonedx-vex-output.md  local-findings.md  openvex-output.md  provider-contract.md  python-api.rst  release-evidence.md
docs/tutorials/: offline-local-findings.md  quickstart.md
release-evidence/: README.md  review.json
scripts/: check-installed-cli.sh  check-installed-csaf.sh  check-release-evidence.sh  check_github_governance.py  generate-release-evidence.sh  install-locked-wheel.sh  normalize-sdist.py  prepare-local-release-tag.sh  release_evidence.py  run-atheris.sh  select-pypi-release-files.py  verify-dist-metadata.py
src/vexcalibur/: __init__.py  cli.py  csaf.py  document.py  domain.py  errors.py  generate.py  github_sbom.py  input_file.py  json_boundary.py  openvex.py  render.py  sbom.py  source_options.py  url_policy.py  vex.py
src/vexcalibur/compat/: __init__.py  vexy.py
src/vexcalibur/sources/: __init__.py  local.py  osv.py
tests/: __init__.py  test_cli.py  test_csaf.py  test_document.py  test_generate.py  test_github_governance.py  test_github_sbom.py  test_input_file.py  test_json_boundary.py  test_local_findings.py  test_normalize_sdist.py  test_openvex.py  test_osv_client.py  test_osv_output_safety.py  test_output_limits.py  test_prepare_local_release_tag.py  test_release_evidence.py  test_release_version.py  test_release_workflow_security.py  test_renovate_configuration.py  test_sbom.py  test_select_pypi_release_files.py  test_verify_dist_metadata.py  test_vex.py  test_vexy_compat.py
tests/fixtures/governance/: expected.json
tests/fixtures/release-evidence/: findings.json  review.json
tests/fixtures/sbom/: cyclonedx-json-1.4-simple.json  cyclonedx-json-1.5-simple.json  cyclonedx-json-simple.json  cyclonedx-xml-1.4-simple.xml  cyclonedx-xml-simple.xml
tests/fixtures/schemas/: README.md
tests/fixtures/vexy/: legacy-config.yml
tests/fuzz/: __init__.py  boundaries.py  conftest.py  fuzz_boundaries.py  test_boundaries.py
tests/fuzz/corpus/github/: valid-spdx.json
tests/fuzz/corpus/identity/: unicode.txt
tests/fuzz/corpus/json/: deep-nesting.json  duplicate-key.json
tests/fuzz/corpus/local/: valid-findings.json
tests/fuzz/corpus/osv/: multi-page-query.json  safe-query.json  terminal-control.json  valid-batch.json  valid-get.json  valid-gzip-query.json
tests/fuzz/corpus/sbom/: forbidden-entity.xml  valid-json.json  valid-xml.xml
tests/golden/: csaf-vex-all-analysis-states.json  cyclonedx-vex-all-analysis-states.json  cyclonedx-vex-simple.json  openvex-vex-all-analysis-states.json  vexy-compat-cli.json
tests/integration/: check_installed_cli.py  check_installed_csaf.py
tests/integration/csaf-validator/: README.md  package-lock.json  package.json  validate.mjs
tests/integration/openvex-go/: go.mod  go.sum  main.go
