[project]
name = "vexcalibur"
version = "0.0.0"
description = "Generate and transform VEX documents from SBOMs and vulnerability data sources."
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = "Apache-2.0"
authors = [
  { name = "Danny Sauer" }
]
keywords = ["vex", "sbom", "cyclonedx", "osv", "vulnerability"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Security",
  "Topic :: Software Development",
  "Typing :: Typed"
]
dependencies = [
  "cyclonedx-python-lib>=8,<12",
  "defusedxml>=0.7.1,<0.8",
  "httpx>=0.27,<1",
  "packageurl-python>=0.17,<1",
  "pydantic>=2.8,<3",
  "rich>=13,<15",
  "typer>=0.26.8,<1",
]

[project.optional-dependencies]
docs = [
  "myst-parser>=4,<5",
  "sphinx>=8,<9",
  "sphinx-autodoc-typehints>=3,<4",
]

[project.urls]
Homepage = "https://github.com/vexcalibur-dev/vexcalibur"
Issues = "https://github.com/vexcalibur-dev/vexcalibur/issues"

[project.scripts]
vexcalibur = "vexcalibur.cli:app"
vexy = "vexcalibur.compat.vexy:app"

[tool.poetry]
packages = [{ include = "vexcalibur", from = "src" }]

[tool.poetry.group.dev.dependencies]
mypy = "^2.1.0"
pytest = ">=9.0.3,<10"
pytest-cov = "^7.0.0"
ruff = "^0.15.20"
pre-commit = "^4.6.0"
detect-secrets = "^1.5.0"
pip-audit = "^2.10.1"
jsonschema = { version = ">=4.25,<5", extras = ["format-nongpl"] }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "C4",
  "N",
  "SIM",
  "RUF",
  "S",
]
ignore = [
  "S101",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["vexcalibur"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=vexcalibur --cov-branch --cov-report=term-missing --cov-report=xml"
markers = [
  "live: tests that call live external services",
]

[tool.coverage.run]
branch = true
source = ["vexcalibur"]

[tool.coverage.report]
show_missing = true
precision = 2
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
