[project]
name = "vexcalibur"
dynamic = ["version"]
description = "Generate and transform VEX documents from SBOMs and vulnerability data sources."
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = "Apache-2.0"
authors = [
  { name = "Danny Sauer" }
]
keywords = ["vex", "sbom", "cyclonedx", "openvex", "osv", "vulnerability"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Security",
  "Topic :: Software Development",
  "Typing :: Typed"
]
dependencies = [
  "cyclonedx-python-lib>=8,<12",
  "defusedxml>=0.7.1,<0.8",
  "httpx>=0.27,<1",
  "packageurl-python>=0.17,<1",
  "pydantic>=2.8,<3",
  "rich>=15.0.0,<16",
  "typer>=0.26.8,<1",
]

[project.optional-dependencies]
docs = [
  "myst-parser>=4,<5",
  "sphinx>=8,<9",
  "sphinx-autodoc-typehints>=3,<4",
]

[dependency-groups]
dev = [
  "detect-secrets>=1.5.0,<2",
  "jsonschema[format-nongpl]>=4.26.0,<5",
  "mypy>=2.1.0,<3",
  "pip-audit>=2.10.1,<3",
  "pre-commit>=4.6.0,<5",
  "pytest>=9.0.3,<10",
  "pytest-cov>=7.0.0,<8",
  "ruff>=0.15.20,<1",
  "twine>=6,<7",
]

[project.urls]
Documentation = "https://vexcalibur-dev.github.io/vexcalibur/"
Homepage = "https://github.com/vexcalibur-dev/vexcalibur"
Issues = "https://github.com/vexcalibur-dev/vexcalibur/issues"

[project.scripts]
vexcalibur = "vexcalibur.cli:app"
vexy = "vexcalibur.compat.vexy:app"

[build-system]
requires = [
  "setuptools==82.0.1",
  "setuptools-scm==10.2.0",
  "wheel==0.47.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["vexcalibur*"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
parentdir_prefix_version = "vexcalibur-"
version_file = "src/vexcalibur/_version.py"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "C4",
  "N",
  "SIM",
  "RUF",
  "S",
]
ignore = [
  "S101",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["vexcalibur"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=vexcalibur --cov-branch --cov-report=term-missing --cov-report=xml"
markers = [
  "live: tests that call live external services",
]

[tool.coverage.run]
branch = true
source = ["vexcalibur"]
omit = ["src/vexcalibur/_version.py"]

[tool.coverage.report]
show_missing = true
precision = 2
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
